Made email mailto link work, with message. Made mobile navbar sidebar text larger. Added background image with blurred effect, visible on desktop screen sizes. Fixed navbar glitching when scrolling up on mobile by showing background color. Created swipe helper function to create swipe left/right callback functions on applied element, used in carousel for swiping to next image.

--- a/src/app.css
+++ b/src/app.css
@@ -93,6 +93,7 @@ body {
   font-family: var(--font-family);
   font-weight: var(--font-weight-base);
   color: var(--color-primary-xdark);
+  background-color: var(--color-primary-base);
 }
 
 a {
@@ -128,6 +129,27 @@ button.primary:hover {
 
 button.icon {
   padding: var(--spacing-base);
+}
+
+button.reset {
+  padding: 0;
+}
+
+a.button-primary {
+  display: flex;
+  justify-content: center;
+  gap: var(--spacing-xsmall);
+
+  padding: var(--spacing-xsmall) var(--spacing-base);
+  border-radius: var(--radius-base);
+
+  color: var(--color-white);
+  background-color: var(--color-primary-light);
+  border: 1px solid var(--color-primary-base);
+}
+
+a.button-primary:hover {
+  background-color: var(--color-primary-light-hover);
 }
 
 /* Text Element Classes */
@@ -171,4 +193,10 @@ button.icon {
   font-size: var(--font-size-3xlarge);
   font-weight: var(--font-weight-bold);
   line-height: 1;
+}
+
+@media (max-width: 40em) {
+  .navbar-text {
+    font-size: 1.375rem;
+  }
 }
